Se añaden estilos a página web

--- a/index.html
+++ b/index.html
@@ -20,6 +20,51 @@
             </div>
 
         </div>
+        <h1>WE ARE CREATIVES</h1>
     </header>
+    <section class="columna">
+        <div class="content-col">
+            <h1>Transform your brand</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Placeat at aliquam quibusdam recusandae fuga ullam distinctio 
+                voluptatibus corporis, eveniet, officia, veritatis maiores explicabo
+                esse dolores nisi quisquam numquam ratione eaque.</p>
+            <p class="learn learn-1">Learn More</p>
+        </div>
+        <div class="img-bg img1"></div>
+    </section>
+    <section class="columna">
+        <div class="img-bg img2"></div>
+        <div class="content-col">
+            <h1>Transform your brand</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Placeat at aliquam quibusdam recusandae fuga ullam distinctio 
+                voluptatibus corporis, eveniet, officia, veritatis maiores explicabo
+                esse dolores nisi quisquam numquam ratione eaque.</p>
+            <p class="learn learn-2">Learn More</p>
+        </div>
+        
+    </section>
+    <section class="columna">
+        
+        <div class="img-bg img3 img-cont">
+            <h1>Graphic Design</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Cupiditate alias atque natus unde autem adipisci iure rerum 
+                hic nulla eius earum, consequatur aliquam, qui vel eos accusamus
+                 quis laudantium magni?
+            </p>
+        </div>
+        <div class="img-bg img4 img-cont">
+            <h1>Photografic</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima 
+                inventore, esse quod consequuntur fugit deleniti est adipisci 
+                reiciendis provident, id incidunt. Eius autem consequatur dolore
+                doloremque numquam delectus debitis soluta.
+            </p>
+        </div>
+
+    </section>
 </body>
 </html>
